--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
         <div class="container">
             <div id="brand">
-                <h1>موقع محمد سيد</h1>
+                <h1>موقع تصاميم </h1>
             </div>
             <nav>
                 <li class="current"><a href="index.html">الصفحة الرئيسية</a></li>
                 <li><a href="#">معرض الاعمال </a></li>
                 <li><a href="#"> اتصل بنا </a></li>
-                <li><a href="#">  قالوا عنا </a></li>
+                <li><a href="#"> الخدمات </a></li>
             </nav>
         </div>
         
@@ -31,7 +31,7 @@
 
     <section id="newsletter">
 <div class="container">
-    <h1>اشترك بالنشرة البريدية</h1>
+    <h1>اشترك ليصلك كل جديد  </h1>
     <form action="">
     <input type="email" placeholder="ادخل البريد الالكتروني" required>
     <button type="submit" class="button">اشترك</button>
